--- a/_posts/2020-01-01-the-us-narrative-today.html
+++ b/_posts/2020-01-01-the-us-narrative-today.html
@@ -1570,107 +1570,107 @@ stories:
   domain: http://www.timesenterprise.com/
   link: https://www.timesenterprise.com/news/local_news/investigation-into-former-chief-s-death-continues/article_2a47478c-6186-5c73-a39e-753aa7b9ccef.html
 images:
-- name: nazi-invasion-dandelions-in-rocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-dandelions-in-rocks.jpg
-- name: rockingchair-rockingchair-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-dark-rain.jpg
-- name: stories-sf-city-bridge-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-sf-city-bridge-copper-circuit.jpg
-- name: white-house-lawn-white-house-lawn-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-dark-soul.jpg
-- name: miamibeach-miamibeach-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-blue-circuit.jpg
-- name: gypsy-wagon-gypsywagon-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-internet-numbers.jpg
-- name: store-on-corner-oldcabin-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-purple-storm.jpg
-- name: rockingchair-rockingchair-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-kandinsky-bv.jpg
-- name: stalin-time-yellow-roses-garden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-yellow-roses-garden.jpg
-- name: cargo-ship-cargo-ship-on-sea-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-purple-storm.jpg
-- name: copper-circuit-shipping-container-ship-sunny-day.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-shipping-container-ship-sunny-day.jpg
-- name: birdhouse-birdhouse-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-gan-vogh.jpg
-- name: stalin-time-old-comuter-wheels-crypto.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-comuter-wheels-crypto.jpg
-- name: cargo-ship-cargo-ship-on-sea-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-really-hot.jpg
-- name: containership-containership-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-mucha-mult.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-copper-circuit-2.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-copper-circuit-2.JPG
-- name: lincoln-memorial-lincolnmemorial-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-neo-instinct.jpg
-- name: stalin-time-cruise-ship-shore-log.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-cruise-ship-shore-log.jpg
-- name: oldhouse-granaryfield-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-creativity.jpg
-- name: stalin-time-statue-playing-instrument.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-statue-playing-instrument.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-rainbow-festival.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-rainbow-festival.JPG
-- name: locked-up-steam-lock-up-steam-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-circuit.jpg
-- name: castle-wall-DSC-0067-wols.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-wols.JPG
-- name: copper-circuit-old-building-seattle-clouds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-building-seattle-clouds.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-feed-people.jpg
-- name: ellis-island-ellis-island-room-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-graham-sutherland.jpg
-- name: server-cloud-server-racks-door-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-sand-paper.jpg
-- name: nazi-invasion-docks-water-front-ships-containers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-docks-water-front-ships-containers.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-crunch-paper.jpg
-- name: capital-battle-capitolbattle-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-light-dali.jpg
-- name: server-cloud-server-racks-door-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-circuit.jpg
-- name: old-barn-old-barn-1500-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-green-zuma.jpg
-- name: stories-new-31-156-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-31-156-800-500-0-max-0--1--1.jpg
-- name: downtheline-downtheline-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-yellow-collage.jpg
-- name: old-church-oldchurch-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-emily-carr.jpg
-- name: birdhouse-birdhouse-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-gred-mash.jpg
-- name: ellis-island-ellis-island-room-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-spagetti-accident.jpg
-- name: nyc-flag-nycflag-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-purple-storm.jpg
-- name: udnie-P6180010.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-P6180010.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-post-modern.jpg
-- name: liberty-back-statue-liberty-back-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-nazi-poster.jpg
-- name: bluelake-creativity-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-creativity-file-00-00-38-67.jpg
-- name: carry-load-carryload-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-ww2-color.jpg
-- name: old-granary-field-oldhouse-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-satan-red.jpg
-- name: stories-new-statue-face-open-mouth-copper-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-statue-face-open-mouth-copper-circuit.png
-- name: window-window-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-purp-paper.jpg
-- name: razorwire-DSC-0080-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-sand-paper.jpg
-- name: oldhousecars-house-old-cars-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-feed-people.jpg
-- name: wind-mills-windmills-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-green-zuma.jpg
-- name: copper-circuit-razor-wire-buildings.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-razor-wire-buildings.jpg
-- name: udnie-IMG_4753.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_4753.jpg
+- name: oldcabin-store-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-dali-two.jpg
+- name: old-door-lock-old-door-lock-2-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-sunday.jpg
+- name: aws-s3-stories-christianity-under-construction-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-christianity-under-construction-atari-asteroids.jpg
+- name: powerlines-power-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-creativity.jpg
+- name: oldcabin-store-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-nazi-poster.jpg
+- name: gypsymosaic-gypsy-eyes-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-constitution.jpg
+- name: bf-skinner-old-broken-piano-street.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-broken-piano-street.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-china-prop.jpg
+- name: gypsy-wagon-gypsywagon-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-dry-skin.jpg
+- name: old-school-house-old-schoolhouse-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-circuit-5.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-neo-instinct.jpg
+- name: crow-crow-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dark-dali.jpg
+- name: cargo-ship-cargo-ship-on-sea-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-blue-electricity.jpg
+- name: docks-docks-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-blue-granite.jpg
+- name: mistywoods-babyfoot-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-graham-sutherland.jpg
+- name: bluelake-gred-mash-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gred-mash-file-00-00-00-00.jpg
+- name: nazi-invasion-lighthouse_36679514616_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-lighthouse_36679514616_o.jpg
+- name: nazi-invasion-surveillance-cameras_36569244062_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-surveillance-cameras_36569244062_o.jpg
+- name: curtain-curtain-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-colored-circuits.jpg
+- name: school-clouds-church-clouds-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-ww2-dresden.jpg
+- name: nyc-flag-nycflag-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-aqua.jpg
+- name: windowmountain-window-mountain-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-atari-missle.jpg
+- name: walled-garden-walled-garden-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-graham-sutherland.jpg
+- name: old-door-lock-old-door-lock-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-crafty-painting.jpg
+- name: old-cabin-oldcabin-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-atari-asteroids.jpg
+- name: old-barn-old-barn-1500-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-cinnamon-rolls.jpg
+- name: legal-statue-legalstatue-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-emily-carr.jpg
+- name: aws-s3-stories-machine-road-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-machine-road-copper-circuit.jpg
+- name: lincoln-memorial-lincolnmemorial-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-internet-numbers.jpg
+- name: old-granary-field-granaryfield-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-diego-rivera1.jpg
+- name: stalin-time-surveillance-3-camers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-surveillance-3-camers.jpg
+- name: hollywood-building-hollywood-building-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-nazi-poster.jpg
+- name: art-museum-art-museum-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-internet-numbers.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-smoking-cigarette.jpg
+- name: lincoln-memorial-lincolnmemorial-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-diego-rivera1.jpg
+- name: stories-statue-face-open-mouth-colorful-blocks.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-statue-face-open-mouth-colorful-blocks.png
+- name: containership-containership-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-satan-red.jpg
+- name: cargo-ship-cargo-ship-on-sea-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-dali-two.jpg
+- name: old-cabin-oldcabin-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-dali-three.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-monet-one.jpg
+- name: berlinwall-DSC-0084-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-kandinsky-bv.jpg
+- name: capital-battle-capitolbattle-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-deep-connections.jpg
+- name: window-window-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-satan-red.jpg
+- name: blossombar-sunday-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-sunday-file-00-00-50-62.jpg
+- name: bluelake-neo-instinct-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-neo-instinct-file-00-00-38-67.jpg
+- name: christianity-christianity-under-construction-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-copper-circuit-2.jpg
+- name: catacombs-catacombs-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-dry-skin.jpg
+- name: fence-bw-fist.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-bw-fist.png
+- name: oldroad-old-road-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-gan-vogh.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-alien-goggles.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-alien-goggles.JPG
+- name: art-museum-art-museum-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-nazi-poster.jpg
 ---
 North Korea's Kim Touts Strategic Weapon Amid Stall In Talks.&nbsp;Man Charged With Stealing Lexus From Sunset Hills Gas Station.&nbsp;Worlds Strongest Man Mark Henry Returns Home For Induction.&nbsp;Indiana Should Stand Its Ground Against Legalizing Marijuana.&nbsp;Insurance Provider Cuts Call Center Fraud By 40%.&nbsp;Hearings Start For Rezoning Application.&nbsp;Hypnotherapy Could Help That Resolution.&nbsp;Have A Resolution For The New Year? Here Are The Most Popular Ones.&nbsp;
